Updated Spark version, general libraries and added scalafix/format