@@ -1,55 +1,55 @@
 import Dependencies._
 
+addCommandAlias("fix", "all compile:scalafix test:scalafix; scalafmtAll")
+
 name := "spark-mail"
 
-//http://docs.oracle.com/javase/8/docs/technotes/tools/windows/javac.html
-//-Xlint enable all recommended warnings
-ThisBuild / javacOptions ++= Seq("-source", "1.8", "-target", "1.8", "-Xlint", "-encoding", "UTF-8")
-//https://github.com/ThoughtWorksInc/sbt-best-practice/blob/master/scalac-options/src/main/scala/com/thoughtworks/sbtBestPractice/scalacOptions/ScalacWarnings.scala
-//scalac -help
-//-unchecked Enable detailed unchecked (erasure) warnings
-//-deprecation Emit warning and location for usages of deprecated APIs.
-//-feature Emit warning and location for usages of features that should be imported explicitly. (e.g. postfix)
-ThisBuild / scalacOptions := Seq("-target:jvm-1.8", "-unchecked", "-deprecation", "-feature")
+// https://scalacenter.github.io/scalafix/docs/users/installation.html
+inThisBuild(
+  List(
+    scalaVersion := "2.13.14", 
+    semanticdbEnabled := true, // enable SemanticDB
+    semanticdbVersion := scalafixSemanticdb.revision // only required for Scala 2.x
+  )
+ )
 
-//the following three settings according to https://github.com/holdenk/spark-testing-base
-ThisBuild / IntegrationTest / fork := true
-ThisBuild / IntegrationTest / parallelExecution := false
-//for forked JVMs
-ThisBuild / IntegrationTest / javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:MaxPermSize=2048M", "-XX:+CMSClassUnloadingEnabled")
+// http://docs.oracle.com/javase/17/docs/technotes/tools/windows/javac.html
+// -Xlint enable all recommended warnings
+ThisBuild / javacOptions ++= Seq("-source", "17", "-target", "17", "-Xlint", "-encoding", "UTF-8")
+// https://github.com/ThoughtWorksInc/sbt-best-practice/blob/master/scalac-options/src/main/scala/com/thoughtworks/sbtBestPractice/scalacOptions/ScalacWarnings.scala
+// scalac -help
+// -unchecked Enable detailed unchecked (erasure) warnings
+// -deprecation Emit warning and location for usages of deprecated APIs.
+// -feature Emit warning and location for usages of features that should be imported explicitly. (e.g. postfix)
+ThisBuild / scalacOptions := Seq("-unchecked", "-deprecation", "-feature", "-Xlint:infer-any", "-Wunused:imports")
+
+//the following settings according to https://github.com/holdenk/spark-testing-base
+ThisBuild / Test / javaOptions ++= Seq("-Xms8G", "-Xmx8G")
+ThisBuild / Test / parallelExecution := false
 
 ThisBuild / initialize := {
   val _ = initialize.value
-  if (sys.props("java.specification.version") != "1.8") {
-    sys.error("Java 8 is required for this project.")
+  if (sys.props("java.specification.version") != "17") {
+    sys.error("Java 17 is required for this project.")
   }
 }
 
-// match Apache Spark Scala (see Spark pom.xml)
-ThisBuild / scalaVersion := "2.11.8"
-
-//for scaladoc to link to external libraries (see https://www.scala-sbt.org/1.x/docs/Howto-Scaladoc.html)
+// for scaladoc to link to external libraries (see https://www.scala-sbt.org/1.x/docs/Howto-Scaladoc.html)
 ThisBuild / autoAPIMappings := true
 
 ThisBuild / resolvers += Resolver.mavenLocal
 
-//https://stackoverflow.com/questions/18838944/how-to-add-provided-dependencies-back-to-run-test-tasks-classpath
-ThisBuild / run in Compile := Defaults.runTask(fullClasspath in Compile, mainClass in (Compile, run), runner in (Compile, run)).evaluated
-ThisBuild / runMain in Compile := Defaults.runMainTask(fullClasspath in Compile, runner in(Compile, run)).evaluated
+// https://github.com/sbt/sbt-assembly
+ThisBuild / Compile / run := Defaults.runTask(Compile / fullClasspath, Compile / run / mainClass, Compile / run / runner).evaluated
+ThisBuild / Compile / runMain := Defaults.runTask(Compile / fullClasspath, Compile / run / mainClass, Compile / run / runner).evaluated
 
-//run sbt-assembly via: sbt assembly to build fat jar
+// run sbt-assembly via: sbt assembly to build fat jar
 lazy val assemblyPluginSettings = Seq(
-  assemblyJarName in assembly := s"${baseDirectory.value.name}-${version.value}-fat.jar",
+  assembly / assemblyJarName := s"${baseDirectory.value.name}-${version.value}-fat.jar",
   //exclude scala from generated fat jars
-  assemblyOption in assembly := (assemblyOption in assembly).value.copy(includeScala = false),
-  //put templatized application.conf (see editsource) in root of fat jar
-  assembledMappings in assembly += {
-    sbtassembly.MappingSet(None, Vector(
-      (baseDirectory.value / "target" / "application.conf") -> "application.conf"
-    ))
-  },
+  assembly / assemblyOption ~= { _.withIncludeScala(false) },
   //http://queirozf.com/entries/creating-scala-fat-jars-for-spark-on-sbt-with-sbt-assembly-plugin
-  assemblyMergeStrategy in assembly := {
+  assembly / assemblyMergeStrategy := {
     case PathList("javax", "ws", _@_*) => MergeStrategy.discard
     case PathList("javax", "servlet", _@_*) => MergeStrategy.discard
     case PathList(html@_*) if html.last endsWith ".html" => MergeStrategy.discard
@@ -61,14 +61,15 @@ lazy val assemblyPluginSettings = Seq(
     case "log4j2.xml" => MergeStrategy.discard
     case "application.conf" => MergeStrategy.concat
     case "META-INF/io.netty.versions.properties" => MergeStrategy.concat
+    case "META-INF/versions/9/module-info.class" => MergeStrategy.first
     case "mime.types" => MergeStrategy.first
     case x =>
-      val oldStrategy = (assemblyMergeStrategy in assembly).value
+      val oldStrategy = (assembly / assemblyMergeStrategy).value
       oldStrategy(x)
   }
 )
 
-//group name for publishing artifacts
+// group name for publishing artifacts
 lazy val miscSettings = Seq(
   organization := "com.uebercomputing"
 )
@@ -80,8 +81,6 @@ lazy val combinedSettings = miscSettings ++ assemblyPluginSettings
 ////////////////////////////////////////////////////////////////////////////
 
 lazy val mailrecordUtils = (project in file("mailrecord-utils"))
-  .configs(IntegrationTest)
-  .settings(Defaults.itSettings: _*)
   .settings(combinedSettings: _*)
   .settings(
     libraryDependencies :=
@@ -95,8 +94,6 @@ lazy val analyticsBaseDir = "analytics"
 
 lazy val datasetAnalytics = (project in file(s"${analyticsBaseDir}/dataset"))
   .dependsOn(mailrecordUtils)
-  .configs(IntegrationTest)
-  .settings(Defaults.itSettings: _*)
   .settings(combinedSettings: _*)
   .settings(
     libraryDependencies :=
@@ -108,8 +105,6 @@ lazy val datasetAnalytics = (project in file(s"${analyticsBaseDir}/dataset"))
 
 lazy val rddAnalytics = (project in file(s"${analyticsBaseDir}/rdd"))
 .dependsOn(mailrecordUtils)
-.configs(IntegrationTest)
-.settings(Defaults.itSettings: _*)
 .settings(combinedSettings: _*)
 .settings(
   libraryDependencies :=
@@ -119,11 +114,9 @@ lazy val rddAnalytics = (project in file(s"${analyticsBaseDir}/rdd"))
       sparkTestDependencies
 )
 
-//root just needs to aggregate all projects
-//when we use any sbt command it gets run for all subprojects also
+// root just needs to aggregate all projects
+// when we use any sbt command it gets run for all subprojects also
 lazy val root = (project in file("."))
   .aggregate(mailrecordUtils, datasetAnalytics, rddAnalytics)
-  .configs(IntegrationTest)
-  .settings(Defaults.itSettings: _*)
   .settings(publish := {})
   .settings(assemblyPluginSettings: _*)
